--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,4 @@ lib_deps =
 	bblanchon/ArduinoJson@^7.2.1
 	beegee-tokyo/DHT sensor library for ESPx@^1.19
 	br3ttb/PID@^1.2.1
+	adafruit/Adafruit MQTT Library@^2.5.9
