--- a/platformio.ini
+++ b/platformio.ini
@@ -8,16 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:d1_mini_lite]
-platform = espressif8266
-board = d1_mini_lite
+[env:nodemcu-32s]
+platform = espressif32@5.4.0
+board = nodemcu-32s
 framework = arduino
+upload_port = /dev/cu.usbserial-1130
+
 monitor_speed = 115200
 lib_deps = 
 	knolleary/PubSubClient@^2.8
-	paulstoffregen/OneWire@^2.3.8
-	milesburton/DallasTemperature@^3.11.0
-	bblanchon/ArduinoJson@^7.2.1
-	beegee-tokyo/DHT sensor library for ESPx@^1.19
-	br3ttb/PID@^1.2.1
+	bblanchon/ArduinoJson@^7
 	adafruit/Adafruit MQTT Library@^2.5.9
+	adafruit/Adafruit NeoPixel@^1.12.3
+	adafruit/Adafruit TCS34725@^1.4.4
